fixed positioning of main container to remove excess white space

--- a/src/App.css
+++ b/src/App.css
@@ -64,9 +64,22 @@ body {
   .main-container {
     margin-top: 12%;
   }
+
+  .headline {
+    font-size: 3em;
+    line-height: 1em;
+    margin-bottom: 5%;
+    margin-top: 2%;
+  }
+
+  .banner-headline {
+    height: 2em;
+    line-height: 2em;
+    margin-bottom: 2em;
+  }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 700px) and (max-width: 1524px) {
   .logo-wrapper {
     width: 50%;
     float: left;
@@ -79,7 +92,7 @@ body {
   }
 
   .main-container {
-    margin-top: 12%;
+    margin-top: 4%;
   }
 
   .headline {
